--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "prettier": "^3.0.0",
+    "sass": "^1.63.6",
     "typescript": "5.1.6"
   }
 }
