--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "next": "13.4.10",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0"
   },
   "devDependencies": {
+    "@prismicio/client": "^5.1.0",
     "@types/node": "20.4.2",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "prettier": "^3.0.0",
-    "sass": "^1.63.6",
     "typescript": "5.1.6"
   }
 }
