--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "next": "13.4.10",
     "prismic-dom": "^2.2.7",
     "react": "18.2.0",
