--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "next": "13.4.10",
     "prismic-dom": "^2.2.7",
     "react": "18.2.0",
