--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PRISMIC_ENDPOINT=
-PRISMIC_ACCESS_TOKEN=
+PRISMIC_ENDPOINT= # adicione seu endpoint do CMS prismic aqui
+PRISMIC_ACCESS_TOKEN= # adicione seu access token CMS prismic aqui
 NEXT_PUBLIC_GA_ID= # analytics
 NEXT_PUBLIC_CA_PUB= # adsense
